<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.peppe.crmdoctors.activity.AddModifyActivity">

    <include layout="@layout/fake_toolbar" />


    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="80dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@null">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@null"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@null"
                    android:orientation="horizontal"

                    android:weightSum="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="0.5"
                        android:text="@string/name"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="0.5"
                        android:text="@string/surname"
                        android:gravity="right"
                        android:textAlignment="gravity"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <EditText
                        android:id="@+id/editTextName"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="0.5"
                        android:background="@android:color/white"
                        android:hint="@string/fill_name"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/editTextSurname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="0.5"
                        android:background="@android:color/white"
                        android:hint="@string/fill_surname"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0.5"
                        android:background="@color/divider"></View>

                    <View
                        android:layout_width="match_parent"

                        android:layout_height="0.5dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0.5"
                        android:background="@color/divider"></View>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/phone"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@null"
                    android:orientation="horizontal"
                    android:weightSum="1">


                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerViewPhoneNumbers"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:background="@null"
                        android:visibility="visible" />

                    <RelativeLayout
                        android:layout_width="match_parent"

                        android:layout_height="30dp"
                        android:layout_weight="0.8"
                        android:background="@null">

                        <ImageView
                            android:id="@+id/add_phone"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentTop="true"
                            android:layout_centerInParent="true"
                            android:background="@drawable/rounded"
                            android:src="@drawable/ic_add" />
                    </RelativeLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_margin="10dp"
                    android:background="@color/divider"></View>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/category"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="18sp" />


                <LinearLayout
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@null"
                    android:orientation="horizontal"
                    android:weightSum="1">


                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerViewCategory"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:background="@null"
                        android:visibility="visible" />

                    <RelativeLayout
                        android:layout_width="match_parent"

                        android:layout_height="30dp"
                        android:layout_weight="0.8"
                        android:background="@null">

                        <ImageView
                            android:id="@+id/add_category"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentTop="true"
                            android:layout_centerInParent="true"
                            android:background="@drawable/rounded"
                            android:src="@drawable/ic_add" />
                    </RelativeLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_margin="10dp"
                    android:background="@color/divider"></View>

                <TextView
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@null"
                    android:text="@string/numbVisit"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@null">

                    <ImageView
                        android:id="@+id/enancheNumbVisit"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_toRightOf="@id/numbVisit"
                        android:background="@drawable/rounded"
                        android:src="@drawable/ic_add" />

                    <TextView
                        android:id="@+id/numbVisit"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@null"
                        android:text="0"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/decreaseNumbVisit"

                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_toLeftOf="@id/numbVisit"
                        android:background="@drawable/rounded"
                        android:src="@drawable/ic_minus" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_margin="10dp"
                    android:background="@color/divider"></View>

                <TextView
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@null"
                    android:text="@string/relevance"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@null">

                    <ImageView
                        android:id="@+id/enancheRelevance"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_toRightOf="@id/relevance"
                        android:background="@drawable/rounded"
                        android:src="@drawable/ic_add" />

                    <TextView
                        android:id="@+id/relevance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:text="0"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/decreaseRelevance"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_toLeftOf="@id/relevance"
                        android:background="@drawable/rounded"
                        android:src="@drawable/ic_minus" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_margin="10dp"
                    android:background="@color/divider"></View>

                <TextView
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@null"
                    android:text="@string/note"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editTextNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@android:color/white"
                    android:hint="@string/fill_note"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="20sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_margin="10dp"
                    android:background="@color/divider"></View>

                <TextView
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@null"
                    android:text="@string/availability"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="18sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerViewAvailability"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_margin="10dp"
                    android:background="@color/divider"></View>

                <TextView
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@null"
                    android:text="@string/address"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@null"
                    android:orientation="horizontal"
                    android:weightSum="1">


                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerViewAddress"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:background="@null"
                        android:visibility="visible" />

                    <RelativeLayout
                        android:layout_width="match_parent"

                        android:layout_height="30dp"
                        android:layout_weight="0.8"
                        android:background="@null">

                        <ImageView
                            android:id="@+id/add_address"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentTop="true"
                            android:layout_centerInParent="true"
                            android:background="@drawable/rounded"
                            android:src="@drawable/ic_add" />
                    </RelativeLayout>

                </LinearLayout>


            </LinearLayout>


        </ScrollView>
    </android.support.v7.widget.CardView>

    <include layout="@layout/container_fs" />

</RelativeLayout>
