<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:paddingLeft="30dp">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true">

        <!--container delete-->
        <RelativeLayout
            android:id="@+id/background_delete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_red_dark"
            android:visibility="gone">

            <ImageView
                android:id="@+id/delete_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_delete" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/delete_icon"
                android:text="@string/delete"
                android:textColor="#fff"
                android:textSize="13dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/background_calendar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_green_light"
            android:visibility="gone">

            <ImageView
                android:id="@+id/calendar"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/calendar_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@id/calendar"
                android:text="@string/fix_appointment"
                android:textColor="#fff"
                android:textSize="13dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/containerInitials"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/nameDoctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/containerOval"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp"
                android:translationZ="5dp" />

            <TextView
                android:id="@+id/firstCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/nameDoctor"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="0dp"
                android:layout_toRightOf="@id/containerOval"
                android:text="@string/app_name"
                android:textColor="@color/colorSecondaryText"
                android:textSize="15sp"
                android:translationZ="5dp" />

            <LinearLayout
                android:id="@+id/containerR"
                android:layout_width="200dp"
                android:layout_height="20dp"
                android:layout_below="@id/firstCategory"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:translationZ="5dp"
                android:weightSum="12">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:text="@string/relevance"
                    android:textAlignment="center"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:text="@string/visit"
                    android:textAlignment="center"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:text="@string/disp"
                    android:textAlignment="center"
                    android:textColor="@color/colorSecondaryText"

                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_below="@id/containerR"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal"
                android:translationZ="5dp"
                android:weightSum="12">

                <RelativeLayout
                    android:layout_width="match_parent"

                    android:layout_height="match_parent"
                    android:layout_weight="4">

                    <TextView
                        android:id="@+id/relevance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:text="3"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="12sp" />

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="2dp"
                        android:layout_toEndOf="@id/relevance"
                        android:src="@drawable/star" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/numbVisit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:text="10"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryText"

                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/dayDisp"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:text="@string/relevance"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"

                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/fschar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="18dp"
                android:gravity="center"
                android:text="AA"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:translationZ="5dp" />


            <!--<com.peppe.crmdoctors.view.TrapezoidView-->
                <!--android:id="@+id/transparent_view"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_alignParentTop="true"-->
                 <!--/>-->


        </RelativeLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>